force-app/main/default/objects/Speaker_Notes__c/Speaker_Notes__c.object-meta.xml
<CustomObject>
    <label>Speaker Notes</label>
    <nameField>
        <displayFormat>SN-{0000}</displayFormat>
        <label>Speaker Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Speaker Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>