force-app/main/default/objects/Speaker_Notes__c/fields/A_V_Requirements__c.field-meta.xml
<CustomField>
    <fullName>A_V_Requirements__c</fullName>
    <label>A/V Requirements</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>