force-app/main/default/objects/Speaker_Notes__c/fields/Bio_Received__c.field-meta.xml
<CustomField>
    <fullName>Bio_Received__c</fullName>
    <label>Bio Received?</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>