force-app/main/default/objects/Speaker_Notes__c/fields/Briefing_Call_Requested__c.field-meta.xml
<CustomField>
    <fullName>Briefing_Call_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Briefing Call Requested</label>
    <type>Checkbox</type>
</CustomField>