force-app/main/default/objects/Speaker_Notes__c/fields/Communicated_GroundTransport__c.field-meta.xml
<CustomField>
    <fullName>Communicated_GroundTransport__c</fullName>
    <label>Communicated GT</label>
    <type>Date</type>
</CustomField>