force-app/main/default/objects/Speaker_Notes__c/fields/Confirm_GroundTransport__c.field-meta.xml
<CustomField>
    <fullName>Confirm_GroundTransport__c</fullName>
    <label>Confirm GT#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>