force-app/main/default/objects/Speaker_Notes__c/fields/Hotel_Communicated__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Communicated__c</fullName>
    <label>Hotel Communicated</label>
    <type>Date</type>
</CustomField>