force-app/main/default/objects/Speaker_Notes__c/fields/Hotel_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Confirm__c</fullName>
    <label>Hotel Confirm #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>