force-app/main/default/objects/Speaker_Notes__c/fields/Hotel_Offered__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Offered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hotel Offered</label>
    <type>Checkbox</type>
</CustomField>