force-app/main/default/objects/Speaker_Notes__c/fields/Notes_Follow_up__c.field-meta.xml
<CustomField>
    <fullName>Notes_Follow_up__c</fullName>
    <label>Notes/Follow-up</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>