force-app/main/default/objects/Speaker_Notes__c/fields/Offered_GroundTransport__c.field-meta.xml
<CustomField>
    <fullName>Offered_GroundTransport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offered GT</label>
    <type>Checkbox</type>
</CustomField>