force-app/main/default/objects/Speaker_Notes__c/fields/Scheduled__c.field-meta.xml
<CustomField>
    <fullName>Scheduled__c</fullName>
    <label>Scheduled</label>
    <length>255</length>
    <type>Text</type>
</CustomField>