force-app/main/default/objects/Speaker_Notes__c/fields/Speaker__c.field-meta.xml
<CustomField>
    <fullName>Speaker__c</fullName>
    <label>Speaker</label>
    <referenceTo>Speaker__c</referenceTo>
    <relationshipLabel>Speaker Notes</relationshipLabel>
    <relationshipName>Speaker_Notes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>